--- a/src/modulo-04/filmator-web/src/main/resources/templates/filmeCadastro.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/filmeCadastro.html
@@ -1,37 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
 		<title>Cadastro de Filmes</title>
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 		<style type="text/css">
-			input {
-				display: block;
+			.form-control{
+				width: 75%;
 			}
-			label {
-				display: block;
+
+			h3 {
+				padding: 10px 10px 20px 10px;
+				margin-bottom: 20px;
+				background-color: #1abc9c;
+				width: 100%;
+			}
+			.cadastro {
+				margin: 0 auto;
+				max-width: 768px;
 			}
 		</style>
 	</head>
 	<body>
-		<h3>Cadastro de Filme</h3>
-		<form action="/salvar" method="POST">
-			<label>Nome:</label>
-			<input type="text" name="nome">
-			<label>Gênero:</label>
-			<select name="genero">
-				<option value="">Escolher</option>
-				{{#generos}}
-					<option value="{{.}}">{{generos}}</option>
-				{{/generos}}
-			</select>
-			<label>Ano de lançamento:</label>
-			<input name="anoLancamento" type="number">
-			<label>Sinopse:</label>
-			<textarea name="sinopse" id="" cols="30" rows="10"></textarea>
-			<label>Imagem:</label>
-			<input name="imagem" type="text">
-			<button type="submit">Cadastrar</button>
-		</form>
+		<section class="cadastro">
+			<h3>Cadastro de Filme <span class="glyphicon glyphicon-film"></span></h3>
+			<form action="/salvarFilme" method="post" class="form-horizontal">
+				<div class="form-group" >
+					<label for="nome" class="col-sm-2 control-label">Nome</label>
+					<div class="col-sm-10">
+						<input id="nome" class="form-control" type="text" name="nome">
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="genero" class="col-sm-2 control-label">Gênero</label>
+					<div class="col-sm-10">
+						<select id="genero" name="genero" class="form-control">
+							<option value="">Escolher</option>
+							{{#generos}}
+								<option value="{{.}}">{{nome}}</option>
+							{{/generos}}
+						</select>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="anoLancamento" class="col-sm-2 control-label">Ano de lançamento</label>
+					<div class="col-sm-10">
+						<input id="anoLancamento" class="form-control" name="anoLancamento" type="number">
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="sinopse" class="col-sm-2 control-label">Sinopse</label>
+					<div class="col-sm-10">
+						<textarea id="sinopse" name="sinopse" cols="30" rows="10" class="form-control"></textarea>
+					</div>
+				</div>
+				<div class="form-group">
+					<label for="imagem" class="col-sm-2 control-label">Imagem</label>
+					<div class="col-sm-10">
+						<input id="imagem" class="form-control" name="imagem" type="text">
+					</div>
+				</div>
+				<div class="form-group">
+			    	<div class="col-sm-offset-2 col-sm-10">
+				    	<button type="submit" class="btn btn-default">Cadastrar</button>
+					</div>
+				</div>
+			</form>
+		</section>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	</body>
 </html>
 
