feat(templates) ajustado template das telas

--- a/src/modulo-04/filmator-web/src/main/resources/templates/home.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 	<style type="text/css">
 		body {
-			background: rgba(0, 0, 0, 0.8);
+			background: rgba(44, 62, 80, 1.0);
 		}
 		.main {
 			position: relative;
@@ -37,7 +37,7 @@
 	<section class="main">
 		<h2 class="title">Filmator <span class="glyphicon glyphicon-film"></span></h2>
 		<div class="buttons">
-			<a href="/cadastrarFilme"><button class="btn btn-default btn-lg">Cadastrar Filmes</button></a>
+			<a href="/inserir"><button class="btn btn-default btn-lg">Cadastrar Filmes</button></a>
 			<a href="/consultarFilme"><button class="btn btn-default btn-lg">Consultar Filmes</button></a>
 		</div>
 	</section>
