--- a/src/modulo-04/filmator-web/src/main/resources/templates/filmeCadastro.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/filmeCadastro.html
@@ -7,27 +7,37 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
+		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
 		<style type="text/css">
+			body {
+				background: rgba(44, 62, 80, 1.0)
+			}
 			.form-control{
 				width: 75%;
 			}
 
-			h3 {
-				padding: 10px 10px 20px 10px;
-				margin-bottom: 20px;
-				background-color: #1abc9c;
+			h2 {
+				margin-bottom: 25px;
+				padding-bottom: 8px;
 				width: 100%;
+				border-bottom: 1px solid #ccc;
+				font-family: 'Josefin Sans';
 			}
 			.cadastro {
-				margin: 0 auto;
+				margin: 20px auto;
 				max-width: 768px;
+				border-radius: 8px;
+				background-color: #fff;
+				padding: 10px;
 			}
 		</style>
 	</head>
 	<body>
 		<section class="cadastro">
-			<h3>Cadastro de Filme <span class="glyphicon glyphicon-film"></span></h3>
-			<form action="/salvarFilme" method="post" class="form-horizontal">
+			<h2>Cadastro de Filme <span class="glyphicon glyphicon-film"></span></h2>
+			<form action="/inserir" method="post" class="form-horizontal">
 				<div class="form-group" >
 					<label for="nome" class="col-sm-2 control-label">Nome</label>
 					<div class="col-sm-10">
