--- a/src/modulo-04/filmator-web/src/main/resources/templates/filmeConsulta.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/filmeConsulta.html
@@ -8,34 +8,53 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 	<style type="text/css">
-		h2, img, .information {
+		h2, img, .information, .image {
 			display: inline-block;
 		}
 		.exibition {
 			text-align: center;
-			margin: 25px auto;
-			width: 70%;
-		}
-		span {
-			position: relative;
-
+			margin: 50px auto;
+			width: 100%;
+			display: block;
 		}
 		.information {
-			margin: 5px;
+			width: 600px;
+		}
+		.image {
+			width: 300px;
+		}
+		.procurar {
+			position: fixed;
+			top: 2%;
+			left: 50%;
+			margin-left: -100px;
 		}
 	</style>
 </head>
 <body>
-	<section class="exibition">
-		{{#filmes}}
-			<div class="information">
-				<h2>{{nome}}</h2>
-				<p>Gênero: {{genero}}</p>
-				<p>Ano de lançamento: {{anoLancamento}}</p>
-			</div>
-			<img src="{{imagem}}">
-		{{/filmes}}
+	<section class="procurar">
+		<form action="/procurar" method="get" class="form-inline">
+				<div class="form-group" >
+					<div class="col-sm-10">
+						<input id="nome" class="form-control" type="text" name="nome" placeholder="Nome" required>
+					</div>
+				</div>
+			<button class="btn btn-default" type="submit">Pesquisar</button>
+		</form>
 	</section>
+	{{#filmes}}
+		<section class="exibition">
+				<div class="information">
+					<h2>{{nome}}</h2>
+					<p>Gênero: {{genero}}</p>
+					<p>Ano de lançamento: {{anoLancamento}}</p>
+				</div>
+				<div class="image">
+					<img src="{{imagem}}">
+				</div>
+		</section>
+	{{/filmes}}
+	
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
