--- a/src/modulo-04/filmator-web/src/main/resources/templates/filmeCadastro.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/filmeCadastro.html
@@ -2,83 +2,64 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title>Cadastro de Filmes</title>
+		<title>Cadastro de filme</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-
-		<link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-
-		<style type="text/css">
-			body {
-				background: rgba(44, 62, 80, 1.0)
-			}
-			.form-control{
-				width: 75%;
-			}
-
-			h2 {
-				margin-bottom: 25px;
-				padding-bottom: 8px;
-				width: 100%;
-				border-bottom: 1px solid #ccc;
-				font-family: 'Josefin Sans';
-			}
-			.cadastro {
-				margin: 20px auto;
-				max-width: 768px;
-				border-radius: 8px;
-				background-color: #fff;
-				padding: 10px;
-			}
-		</style>
+		<link rel="stylesheet" href="/css/filmeCadastro.css">
 	</head>
 	<body>
-		<section class="cadastro">
-			<h2>Cadastro de Filme <span class="glyphicon glyphicon-film"></span></h2>
-			<form action="/inserir" method="post" class="form-horizontal">
-				<div class="form-group" >
-					<label for="nome" class="col-sm-2 control-label">Nome</label>
-					<div class="col-sm-10">
-						<input id="nome" class="form-control" type="text" name="nome">
-					</div>
+		{{> menu}}
+		<section class="container-fluid">
+			<section class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<form class="form-horizontal" action="/filmeCadastro" method="post">
+						<h2 class="form-signin-heading">Cadastro de filme</h2>
+						<input type="hidden" name="idFilme" value="{{#filme}}{{idFilme}}{{/filme}}">
+						<div class="form-group">
+							<label for="nome" class="col-sm-2 control-label">Nome:</label>
+							<div class="col-sm-10">
+								<input type="text" name="nome" id="nome" class="form-control" value="{{#filme}}{{nome}}{{/filme}}">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="genero" class="col-sm-2 control-label">Gênero:</label>
+							<div class="col-sm-10">
+								<select class="form-control" name="genero" id="genero">
+									<option value="">Escolher</option>
+									{{#generos}}
+										<option value="{{.}}">{{nome}}</option>
+									{{/generos}}
+								</select>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="anoLancamento" class="col-sm-2 control-label">Ano de lançamento:</label>
+							<div class="col-sm-10">
+								<input type="number" name="anoLancamento" class="form-control" id="anoLancamento" value="{{#filme}}{{anoLancamento}}{{/filme}}">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="sinopse" class="col-sm-2 control-label">Sinopse:</label>
+							<div class="col-sm-10">
+								<textarea name="sinopse" id="sinopse" class="form-control" rows="5">{{#filme}}{{sinopse}}{{/filme}}</textarea>
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="imagem" class="col-sm-2 control-label">Imagem:</label>
+							<div class="col-sm-10">
+								<input type="text" class="form-control" name="imagem" id="imagem" placeholder="Imagem" value="{{#filme}}{{imagem}}{{/filme}}">
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-sm-offset-2 col-sm-10">
+								<button type="submit" class="btn btn-default">Cadastrar</button>
+							</div>
+						</div>
+					</form>
 				</div>
-				<div class="form-group">
-					<label for="genero" class="col-sm-2 control-label">Gênero</label>
-					<div class="col-sm-10">
-						<select id="genero" name="genero" class="form-control">
-							<option value="">Escolher</option>
-							{{#generos}}
-								<option value="{{.}}">{{nome}}</option>
-							{{/generos}}
-						</select>
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="anoLancamento" class="col-sm-2 control-label">Ano de lançamento</label>
-					<div class="col-sm-10">
-						<input id="anoLancamento" class="form-control" name="anoLancamento" type="number">
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="sinopse" class="col-sm-2 control-label">Sinopse</label>
-					<div class="col-sm-10">
-						<textarea id="sinopse" name="sinopse" cols="30" rows="10" class="form-control"></textarea>
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="imagem" class="col-sm-2 control-label">Imagem</label>
-					<div class="col-sm-10">
-						<input id="imagem" class="form-control" name="imagem" type="text">
-					</div>
-				</div>
-				<div class="form-group">
-			    	<div class="col-sm-offset-2 col-sm-10">
-				    	<button type="submit" class="btn btn-default">Cadastrar</button>
-					</div>
-				</div>
-			</form>
+			</section>
 		</section>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 		<!-- Latest compiled and minified JavaScript -->
