feat(filmator-web) atualização do projeto

--- a/src/modulo-04/filmator-web/src/main/resources/static/css/filmes.css
+++ b/src/modulo-04/filmator-web/src/main/resources/static/css/filmes.css
@@ -1,4 +1,14 @@
-.list {
+.search {
 	margin-top: 85px;
 	text-align: center;
+}
+
+.list {
+	margin-top:25px;
+	text-align: center;
+}
+
+.film {
+	height: 85vh;
+	margin-bottom: 70px;
 }
