--- a/src/modulo-04/filmator-web/src/main/resources/templates/atores.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/atores.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-	<meta charset="UTF-8">
-	<title>Atores</title>
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-	<link href="/css/carousel.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="/css/filmes.css">
-</head>
-<body>
-	   {{> menu}}
-
-    <section class="container-fluid">
-    	<section class="row list">
-			{{#atores}}
-			<div class="col-md-4">
-				<img class="img-thumbnail" src="{{imagem}}" alt="Generic placeholder image" width="300" height="300">
-				<h2>{{nome}}</h2>
-				<p>Informação: {{informacao}}</p>
-			</div>
-			{{/atores}}
-    	</section>
-	</section>
-
-    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Atores</title>
+		{{> bootstrapcss}}
+		<link href="/css/carousel.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="/css/filmes.css">
+	</head>
+	<body>
+		{{> menu}}
+		<section class="container-fluid">
+			<section class="row search">
+				<div class="col-md-8 col-md-offset-2">
+					<form class="form-inline" action="/pesquisarAtor" method="get">
+						<div class="form-group">
+							<input type="text" name="nome" class="form-control" id="nome" placeholder="Nome do ator">
+						</div>
+						<button type="submit" class="btn btn-default">Pesquisar</button>
+					</form>
+				</div>
+			</section>
+			<section class="row list">
+				{{#atores}}
+				<div class="col-md-4">
+					<img class="img-thumbnail" src="{{imagem}}" alt="Generic placeholder image" width="300" height="300">
+					<h2>{{nome}}</h2>
+					<p>Informação: {{informacao}}</p>
+				</div>
+				{{/atores}}
+				{{^atores}}
+				<p>Não foram encontrados atores com esse nome.</p>
+				{{/atores}}
+			</section>
+		</section>
+		{{> javascript}}
+	</body>
 </html>
