--- a/src/modulo-04/filmator-web/src/main/resources/templates/filmeCadastro.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/filmeCadastro.html
@@ -3,10 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Cadastro de filme</title>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+		{{> bootstrapcss}}
 		<link rel="stylesheet" href="/css/filmeCadastro.css">
 	</head>
 	<body>
@@ -20,16 +17,16 @@
 						<div class="form-group">
 							<label for="nome" class="col-sm-2 control-label">Nome:</label>
 							<div class="col-sm-10">
-								<input type="text" name="nome" id="nome" class="form-control" value="{{#filme}}{{nome}}{{/filme}}">
+								<input type="text" name="nome" id="nome" class="form-control" value="{{#filme}}{{nome}}{{/filme}}" required>
 							</div>
 						</div>
 						<div class="form-group">
 							<label for="genero" class="col-sm-2 control-label">Gênero:</label>
 							<div class="col-sm-10">
-								<select class="form-control" name="genero" id="genero">
+								<select class="form-control" name="genero" id="genero" required>
 									<option value="">Escolher</option>
 									{{#generos}}
-										<option value="{{.}}">{{nome}}</option>
+									<option value="{{.}}">{{nome}}</option>
 									{{/generos}}
 								</select>
 							</div>
@@ -37,19 +34,19 @@
 						<div class="form-group">
 							<label for="anoLancamento" class="col-sm-2 control-label">Ano de lançamento:</label>
 							<div class="col-sm-10">
-								<input type="number" name="anoLancamento" class="form-control" id="anoLancamento" value="{{#filme}}{{anoLancamento}}{{/filme}}">
+								<input type="number" name="anoLancamento" class="form-control" id="anoLancamento" value="{{#filme}}{{anoLancamento}}{{/filme}}" required>
 							</div>
 						</div>
 						<div class="form-group">
 							<label for="sinopse" class="col-sm-2 control-label">Sinopse:</label>
 							<div class="col-sm-10">
-								<textarea name="sinopse" id="sinopse" class="form-control" rows="5">{{#filme}}{{sinopse}}{{/filme}}</textarea>
+								<textarea name="sinopse" id="sinopse" class="form-control" rows="5" maxlength="255" required>{{#filme}}{{sinopse}}{{/filme}}</textarea>
 							</div>
 						</div>
 						<div class="form-group">
 							<label for="imagem" class="col-sm-2 control-label">Imagem:</label>
 							<div class="col-sm-10">
-								<input type="text" class="form-control" name="imagem" id="imagem" placeholder="Imagem" value="{{#filme}}{{imagem}}{{/filme}}">
+								<input type="text" class="form-control" name="imagem" id="imagem" placeholder="Imagem" value="{{#filme}}{{imagem}}{{/filme}}" required>
 							</div>
 						</div>
 						<div class="form-group">
@@ -61,9 +58,6 @@
 				</div>
 			</section>
 		</section>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+		{{> javascript}}
 	</body>
 </html>
-
