--- a/src/modulo-04/filmator-web/src/main/resources/templates/filmeLista.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/filmeLista.html
@@ -1,58 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-	<meta charset="UTF-8">
-	<title>Lista de filmes</title>
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-	<link rel="stylesheet" href="/css/filmeLista.css">
-</head>
-<body>
-	{{> menu}}
-
-	<div class="container-fluid">
-		<table class="table table-striped table-bordered">
-			<thead>
-				<tr>
-					<th>Nome</th>
-					<th>Genero</th>
-					<th>Ano de Lançamento</th>
-					<th>Avaliação</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				{{#filmes}}
-				<tr>
-					<td>{{nome}}</td>
-					<td>{{genero.nome}}</td>
-					<td>{{anoLancamento}}</td>
-					<td value="{{idFilme}}">
-						<img src="/img/star0.png" alt="avaliation" width="20" height="20" class="star" value="1">
-						<img src="/img/star0.png" alt="avaliation" width="20" height="20" class="star" value="2">
-						<img src="/img/star0.png" alt="avaliation" width="20" height="20" class="star" value="3">
-						<img src="/img/star0.png" alt="avaliation" width="20" height="20" class="star" value="4">
-						<img src="/img/star0.png" alt="avaliation" width="20" height="20" class="star" value="5">
-					</td>
-					<td class="remove">
-						<a href="/filmeEditar?idFilme={{idFilme}}">
-							<span class="glyphicon glyphicon-edit" title="Editar"></span>
-						</a>
-						<a href="/filmeExcluir?idFilme={{idFilme}}">
-							<span class="glyphicon glyphicon-remove" title="Excluir"></span>
-						</a>
-					</td>
-				</tr>
-				{{/filmes}}
-			</tbody>
-		</table>
-	</div>
-	
-	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script type="text/javascript" src="/js/filmeLista.js"></script>
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Lista de filmes</title>
+		{{> bootstrapcss}}
+		<link rel="stylesheet" href="/css/filmeLista.css">
+	</head>
+	<body>
+		{{> menu}}
+		<div class="container-fluid">
+			<table class="table table-striped table-bordered">
+				<thead>
+					<tr>
+						<th>Nome</th>
+						<th>Genero</th>
+						<th>Ano de Lançamento</th>
+						<th>Avaliação</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					{{#filmes}}
+					<tr>
+						<td>{{nome}}</td>
+						<td>{{genero.nome}}</td>
+						<td>{{anoLancamento}}</td>
+						<td value="{{idFilme}}" nota="{{nota}}">
+							<img src="/img/star0.png" alt="avaliation" width="20" height="20" class="star" value="1">
+							<img src="/img/star0.png" alt="avaliation" width="20" height="20" class="star" value="2">
+							<img src="/img/star0.png" alt="avaliation" width="20" height="20" class="star" value="3">
+							<img src="/img/star0.png" alt="avaliation" width="20" height="20" class="star" value="4">
+							<img src="/img/star0.png" alt="avaliation" width="20" height="20" class="star" value="5">
+						</td>
+						<td class="remove">
+							<a href="/filmeEditar?idFilme={{idFilme}}">
+								<span class="glyphicon glyphicon-edit" title="Editar"></span>
+							</a>
+							<a href="/filmeExcluir?idFilme={{idFilme}}">
+								<span class="glyphicon glyphicon-remove" title="Excluir"></span>
+							</a>
+						</td>
+					</tr>
+					{{/filmes}}
+					{{^filmes}}
+					<tr>
+						<td>Nenhum filme encontrado!</td>
+					</tr>
+					{{/filmes}}
+				</tbody>
+			</table>
+		</div>
+		{{> javascript}}
+		<script type="text/javascript" src="/js/filmeLista.js"></script>
+		
+	</body>
 </html>
