--- a/src/modulo-04/filmator-web/src/main/resources/templates/filmes.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/filmes.html
@@ -3,32 +3,39 @@
   <head>
     <meta charset="UTF-8">
     <title>Filmes</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    {{> bootstrapcss}}
     <link href="/css/carousel.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/filmes.css">
   </head>
   <body>
     {{> menu}}
-
     <section class="container-fluid">
+      <section class="row search">
+        <div class="col-md-8 col-md-offset-2">
+          <form class="form-inline" action="/pesquisarFilme" method="get">
+            <div class="form-group">
+              <input type="text" name="nome" class="form-control" id="nome" placeholder="Nome do filme">
+            </div>
+            <button type="submit" class="btn btn-default">Pesquisar</button>
+          </form>
+        </div>
+      </section>
       <section class="row list">
         {{#filmes}}
-        <div class="col-md-4">
+        <div class="col-md-4 film">
           <img class="img-thumbnail" src="{{Imagem}}" alt="Generic placeholder image" width="300" height="300">
           <h2>{{nome}}</h2>
           <p>Ano lançamento: {{anoLancamento}}</p>
-          <p>Gênero: {{genero}}</p>
+          <p>Gênero: {{genero.nome}}</p>
           <p>Sinopse: {{sinopse}}</p>
+          <img src="/img/{{nota}}stars.png" alt="avaliation" width="100" height="20">
         </div>
+        {{/filmes}}
+        {{^filmes}}
+        <p>Não foram encontrados filme com esse nome.</p>
         {{/filmes}}
       </section>
     </section>
-
-    <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    {{> javascript}}
   </body>
 </html>
