--- a/src/modulo-04/filmator-web/src/main/resources/templates/login.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/login.html
@@ -3,25 +3,28 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Cadastro de Filmes</title>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+		{{> bootstrapcss}}
 		<link rel="stylesheet" href="/css/login.css">
 	</head>
 	<body>
 		{{> menu}}
 		<section class="container-fluid">
-				<form class="form-signin" action="/login" method="post">
-					<h2 class="form-signin-heading">Faça seu login</h2>
-					<input type="text" name="login" id="username" class="form-control" placeholder="Username" required autofocus>
-					<input type="password" name="senha" id="password" class="form-control" placeholder="Password" required>
-					<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
-				</form>
+			<form id="form-login" class="form-signin" action="javascript:void(0)" method="POST">
+				<h2 class="form-signin-heading">Faça seu login</h2>
+				<div class="form-group">
+					<div class="col-mds-10">
+						<input type="text" name="login" id="username" class="form-control" placeholder="Username" required autofocus>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-mds-10">
+						<input type="password" name="senha" id="password" class="form-control" placeholder="Password" required>
+					</div>
+				</div>
+				<button class="btn btn-lg btn-primary btn-block login" type="submit">Login</button>
+			</form>
 		</section>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+		{{> javascript}}
+		<script type="text/javascript" src="/js/login.js"></script>
 	</body>
 </html>
-
