--- a/src/modulo-04/filmator-web/src/main/resources/templates/usuarioCadastro.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/usuarioCadastro.html
@@ -3,10 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Cadastro de usuário</title>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+		{{> bootstrapcss}}
 		<link rel="stylesheet" href="/css/usuarioCadastro.css">
 	</head>
 	<body>
@@ -20,13 +17,13 @@
 						<div class="form-group">
 							<label for="login" class="col-sm-2 control-label">Login:</label>
 							<div class="col-sm-10">
-								<input type="text" name="login" id="login" class="form-control" value="{{#usuario}}{{login}}{{/usuario}}">
+								<input type="text" name="login" id="login" class="form-control" value="{{#usuario}}{{login}}{{/usuario}}" required>
 							</div>
 						</div>
 						<div class="form-group">
 							<label for="password" class="col-sm-2 control-label">Senha:</label>
 							<div class="col-sm-10">
-								<input type="password" name="senha" id="password" class="form-control">
+								<input type="password" name="senha" id="password" class="form-control" required>
 							</div>
 						</div>
 						<div class="form-group">
@@ -38,9 +35,6 @@
 				</div>
 			</section>
 		</section>
-		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+		{{> javascript}}
 	</body>
 </html>
-
