--- a/src/modulo-04/filmator-web/src/main/resources/templates/usuarioLista.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/usuarioLista.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-	<meta charset="UTF-8">
-	<title>Lista de Atores</title>
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-	<link rel="stylesheet" href="/css/usuarioLista.css">
-</head>
-<body>
-	{{> menu}}
-
-	<div class="container-fluid">
-		<table class="table table-striped table-bordered">
-			<thead>
-				<tr>
-					<th>Login</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				{{#usuarios}}
-				<tr>
-					<td>{{login}}</td>
-					<td class="remove">
-						<a href="/usuarioEditar?idUsuario={{idUsuario}}">
-							<span class="glyphicon glyphicon-edit" title="Editar"></span>
-						</a>
-						<a href="/usuarioExcluir?idUsuario={{idUsuario}}">
-							<span class="glyphicon glyphicon-remove" title="Excluir"></span>
-						</a>
-					</td>
-				</tr>
-				{{/usuarios}}
-			</tbody>
-		</table>
-	</div>
-	
-	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Lista de Atores</title>
+		{{> bootstrapcss}}
+		<link rel="stylesheet" href="/css/usuarioLista.css">
+	</head>
+	<body>
+		{{> menu}}
+		<div class="container-fluid">
+			<table class="table table-striped table-bordered">
+				<thead>
+					<tr>
+						<th>Login</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					{{#usuarios}}
+					<tr>
+						<td>{{login}}</td>
+						<td class="remove">
+							<a href="/usuarioEditar?idUsuario={{idUsuario}}">
+								<span class="glyphicon glyphicon-edit" title="Editar"></span>
+							</a>
+							<a href="/usuarioExcluir?idUsuario={{idUsuario}}">
+								<span class="glyphicon glyphicon-remove" title="Excluir"></span>
+							</a>
+						</td>
+					</tr>
+					{{/usuarios}}
+					{{^usuarios}}
+					<tr>
+						<td>Nenhum usuário encontrado!</td>
+					</tr>
+					{{/usuarios}}
+				</tbody>
+			</table>
+		</div>
+		
+		{{> javascript}}
+	</body>
 </html>
