--- a/src/modulo-04/filmator-web/src/main/resources/templates/filmes.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/filmes.html
@@ -28,7 +28,7 @@
           <p>Ano lançamento: {{anoLancamento}}</p>
           <p>Gênero: {{genero.nome}}</p>
           <p>Sinopse: {{sinopse}}</p>
-          <img src="/img/{{nota}}stars.png" alt="avaliation" width="100" height="20">
+          <img src="/img/{{nota}}stars.png" alt="avaliation" width="100" height="20" title="{{nota}}">
         </div>
         {{/filmes}}
         {{^filmes}}
