feat(filmator-web) atualização do projeto

--- a/src/modulo-04/filmator-web/src/main/resources/templates/atores.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/atores.html
@@ -29,7 +29,7 @@
 				</div>
 				{{/atores}}
 				{{^atores}}
-				<p>Não foram encontrados atores com esse nome.</p>
+				<p>Não foram encontrados atores.</p>
 				{{/atores}}
 			</section>
 		</section>
