--- a/src/modulo-04/filmator-web/src/main/resources/templates/filmes.html
+++ b/src/modulo-04/filmator-web/src/main/resources/templates/filmes.html
@@ -32,7 +32,7 @@
         </div>
         {{/filmes}}
         {{^filmes}}
-        <p>Não foram encontrados filme com esse nome.</p>
+        <p>Não foram encontrados filmes.</p>
         {{/filmes}}
       </section>
     </section>
